	* Removed dependency on MooseX::Singleton
	* Model: added author, copyright, license fields. This data is not used by
	  Config::Model, but can be used in the user interface or to generate config
	  class doc
	* AnyThing: Fix parsing of multi line annotations. Now use Pod::POM 
	  to load annocation from Pod document
	* dist.ini: Depends on Pod::POM
	* Model.pm: added generate_doc method

2011-03-01 Dominique Dumont  <domi.dumont@free.fr> 1.235
    
    * Application changes:
        * dpkg control source model: Encourage Standard-Version 3.9.1
        * dpkg control dependency: only versions older than old-stable (i.e. 
          not found on madison) will trigger a warning
        * dpkg copyright: Handle license in header (Closes Debian #614776)
        * Dpkg copyright backend: skip empty copyright lines
        
    * Framework changes:
        * WarpedThing: Can warp based on the location in a tree. For instance to make
        an element mandatory in one place and not in another. Used by Debian copyright model
        * Value: mandatory values also require non-empty strings
        * config-edit: Force to load all sub-models (i.e. control, copyright) of
        a top-model (err.. dpkg) when run with option -ui none

2011-02-21 Dominique Dumont  <domi.dumont@free.fr> 1.234
    
    * factor out comment extraction: code that retrieve comments and tie it to 
      actual config data is generic. Now this is handled by 
      C::M::B::Any::associates_comments_with_data
    * factored out comment writing in C::M::B::Any::write_global_comments
      and C::M::B::Any::write_data_and_comments
    * Fix bad handling of leaf type Ini backend (Thanks Krzysztof for the notice)
    

2011-02-11 Dominique Dumont  <domi.dumont@free.fr> 1.233
    
    * Application changes:
        * dpkg control source model: Added DM-Upload-Allowed and all Vcs-* tags defined 
        in Debian reference guide (Thanks Peter Pentchev for the patch)
          (Fix RT 65575)
        